syntax = "proto3";
package Shared;

message HelloReply {
   string Message = 1;
}
message HelloRequest {
   string Name = 1;
}
service GreeterService {
   rpc SayHello (HelloRequest) returns (HelloReply);
}
